# nif

./: .gitignore  AUTHORS  ChangeLog  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
nif/: __init__.py  annotation.py  namespace.py  utils.py
nif.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt
nif/examples/: aardwamte.nif  madrid_empty.nif  madrid_ner.nif  words.ttl
nif/tests/: .env  test_annotation.py  test_deserialize.py  test_examples.py
