[metadata]
name = nif
author =
    Artem Revenko
    Victor Mireles
author_email =
    artreven@gmail.com
    syats@gmail.com
summary = NLP interchange format library for Python
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    NLP
    NIF
license = MIT

# [files]

# [entry_points]